--- a/Tensor Board/TB.ipynb
+++ b/Tensor Board/TB.ipynb
@@ -6,7 +6,11 @@
    "source": [
     "In machine learning, to improve something you often need to be able to measure it. TensorBoard is a tool for providing the measurements and visualizations needed during the machine learning workflow. It enables tracking experiment metrics like loss and accuracy, visualizing the model graph, projecting embeddings to a lower dimensional space, and much more.\n",
     "\n",
-    "This quickstart will show how to quickly get started with TensorBoard. The remaining guides in this website provide more details on specific capabilities, many of which are not included here."
+    "This quickstart will show how to quickly get started with TensorBoard. The remaining guides in this website provide more details on specific capabilities, many of which are not included here.\n",
+    "\n",
+    "TensorBoard Link: https://www.tensorflow.org/tensorboard/get_started\n",
+    "\n",
+    "Colab: https://colab.research.google.com/github/tensorflow/tensorboard/blob/master/docs/get_started.ipynb#scrollTo=A4UKgTLb9fKI\n"
    ]
   },
   {
