--- a/Graphics processing unit/GPU.ipynb
+++ b/Graphics processing unit/GPU.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
        "'2.9.1'"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
        "[PhysicalDevice(name='/physical_device:CPU:0', device_type='CPU')]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
        "(50000, 32, 32, 3)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
        "(10000, 32, 32, 3)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
        "(50000, 1)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
        "(10000, 1)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
        "3"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
        "       [1]], dtype=uint8)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,16 +226,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1d004a9c910>"
+       "<matplotlib.image.AxesImage at 0x1f5598273a0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
        "array([6], dtype=uint8)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
        "9"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
        "'truck'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
        "'truck'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
        "(50000, 32, 32, 3)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
        "(10000, 32, 32, 3)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
        "       [0., 1., 0., 0., 0., 0., 0., 0., 0., 0.]], dtype=float32)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
        "       [0., 0., 0., 0., 0., 0., 1., 0., 0., 0.]], dtype=float32)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +496,7 @@
        "3072"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,28 +528,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/3\n",
-      "1563/1563 [==============================] - 161s 102ms/step - loss: 1.8083 - accuracy: 0.3541\n",
-      "Epoch 2/3\n",
-      "1563/1563 [==============================] - 163s 104ms/step - loss: 1.6209 - accuracy: 0.4286\n",
-      "Epoch 3/3\n",
-      "1563/1563 [==============================] - 162s 103ms/step - loss: 1.5398 - accuracy: 0.4562\n"
+      "1563/1563 [==============================] - 184s 117ms/step - loss: 1.8092 - accuracy: 0.3573\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x1d01110ead0>"
+       "<keras.callbacks.History at 0x1f562b356f0>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +557,7 @@
     "    metrics=['accuracy']\n",
     ")\n",
     "\n",
-    "model.fit(xtrain_scaled,ytrain_categorical,epochs=3)"
+    "model.fit(xtrain_scaled,ytrain_categorical,epochs=1)"
    ]
   },
   {
@@ -584,7 +579,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "313/313 [==============================] - 11s 30ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.3813467 , 0.4451869 , 0.78571194, ..., 0.1181746 , 0.551819  ,\n",
+       "        0.19050701],\n",
+       "       [0.6286324 , 0.8664057 , 0.4769775 , ..., 0.19054289, 0.91811687,\n",
+       "        0.9807755 ],\n",
+       "       [0.77397865, 0.7371397 , 0.5166375 , ..., 0.2671742 , 0.9435817 ,\n",
+       "        0.9351879 ],\n",
+       "       ...,\n",
+       "       [0.22466235, 0.16594915, 0.6133213 , ..., 0.5824134 , 0.2788418 ,\n",
+       "        0.2458566 ],\n",
+       "       [0.27153763, 0.30320457, 0.7891609 , ..., 0.40426108, 0.22734766,\n",
+       "        0.4011646 ],\n",
+       "       [0.46402094, 0.16352588, 0.785697  , ..., 0.7754185 , 0.26689735,\n",
+       "        0.37429467]], dtype=float32)"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict(xtest_scaled) # show all prediction values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "313/313 [==============================] - 10s 31ms/step - loss: 1.7449 - accuracy: 0.3606\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1.744940996170044, 0.36059999465942383]"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.evaluate(xtest_scaled,ytest_categorical)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "313/313 [==============================] - 8s 27ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0.3813467 , 0.4451869 , 0.78571194, 0.81417   , 0.45100194,\n",
+       "       0.71233135, 0.5544068 , 0.1181746 , 0.551819  , 0.19050701],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict(xtest_scaled)[0] # show all possible prediction values of zero index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -597,105 +687,10 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.29110217, 0.75688636, 0.48038468, ..., 0.08182011, 0.72529614,\n",
-       "        0.15459934],\n",
-       "       [0.7402838 , 0.98915064, 0.12804642, ..., 0.13256954, 0.9820299 ,\n",
-       "        0.9897653 ],\n",
-       "       [0.8437547 , 0.9786948 , 0.21135768, ..., 0.19313805, 0.98296726,\n",
-       "        0.93695307],\n",
-       "       ...,\n",
-       "       [0.05517822, 0.1280214 , 0.7490643 , ..., 0.5511544 , 0.29764733,\n",
-       "        0.2316578 ],\n",
-       "       [0.15254945, 0.58762825, 0.56378794, ..., 0.42617553, 0.2541034 ,\n",
-       "        0.36048466],\n",
-       "       [0.39567563, 0.47940972, 0.47949013, ..., 0.90055496, 0.3951063 ,\n",
-       "        0.4495389 ]], dtype=float32)"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.predict(xtest_scaled) # show all prediction values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "313/313 [==============================] - 11s 34ms/step - loss: 1.5600 - accuracy: 0.4455\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[1.5600271224975586, 0.445499986410141]"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.evaluate(xtest_scaled,ytest_categorical)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "313/313 [==============================] - 9s 28ms/step\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([0.29110217, 0.75688636, 0.48038468, 0.8699544 , 0.27549386,\n",
-       "       0.77460605, 0.66268146, 0.08182011, 0.72529614, 0.15459934],\n",
-       "      dtype=float32)"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.predict(xtest_scaled)[0] # show all possible prediction values of zero index"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "313/313 [==============================] - 9s 28ms/step\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
        "3"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,14 +701,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "313/313 [==============================] - 9s 30ms/step\n"
+      "313/313 [==============================] - 9s 28ms/step\n"
      ]
     },
     {
@@ -722,7 +717,7 @@
        "'cat'"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -734,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +738,7 @@
        "array([3], dtype=uint8)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +758,7 @@
        "'cat'"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,8 +769,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Step-5: Performance Test"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -799,20 +801,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1563/1563 [==============================] - 175s 111ms/step - loss: 1.8066 - accuracy: 0.3579\n",
-      "2min 56s ± 0 ns per loop (mean ± std. dev. of 1 run, 1 loop each)\n"
+      "1563/1563 [==============================] - 228s 145ms/step - loss: 1.8145 - accuracy: 0.3532\n",
+      "3min 49s ± 0 ns per loop (mean ± std. dev. of 1 run, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "%%timeit -n1 -r1\n",
+    "# CPU \n",
+    "%%timeit -n1 -r1 # measure the total execution time\n",
     "with tf.device('/CPU:0'):\n",
     "    cpu_model=get_model()\n",
     "    cpu_model.fit(xtrain_scaled,ytrain_categorical,epochs=1)"
@@ -820,19 +823,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1563/1563 [==============================] - 170s 108ms/step - loss: 1.8144 - accuracy: 0.3542\n",
-      "2min 52s ± 0 ns per loop (mean ± std. dev. of 1 run, 1 loop each)\n"
+      "1563/1563 [==============================] - 155s 98ms/step - loss: 1.8142 - accuracy: 0.3525\n",
+      "2min 38s ± 0 ns per loop (mean ± std. dev. of 1 run, 1 loop each)\n"
      ]
     }
    ],
    "source": [
+    "# GPU\n",
     "%%timeit -n1 -r1\n",
     "with tf.device('/GPU:0'):\n",
     "    cpu_model=get_model()\n",
