--- a/Graphics processing unit/GPU.ipynb
+++ b/Graphics processing unit/GPU.ipynb
@@ -842,6 +842,25 @@
     "    cpu_model=get_model()\n",
     "    cpu_model.fit(xtrain_scaled,ytrain_categorical,epochs=1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32me:\\DATA SCIENCE\\PYTHON\\Deep-Learning-Project\\Graphics processing unit\\GPU.ipynb Cell 1'\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/DATA%20SCIENCE/PYTHON/Deep-Learning-Project/Graphics%20processing%20unit/GPU.ipynb#ch0000000?line=0'>1</a>\u001b[0m y_pred\u001b[39m=\u001b[39mmodel\u001b[39m.\u001b[39mpredict(xtest)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'model' is not defined"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
